welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: value update is not a member of Int
		if(getX() = getMondeLargeur() - 1 && getY() == getMondeHauteur - 1) {
                   ^